--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "CarstoreContext": "host=localhost;port=5432;database=company_carstore;username=driver;password=12345;pooling=true"
-  },
+    "CarstoreContext": "host=company-carstore-db-gunauger.postgres.database.azure.com;port=5432;database=company_carstore;username=dbadmin@company-carstore-db-gunauger;password=PkvhCLqx^h3F8^ze;pooling=true;SSL Mode=Require"  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
